--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="section__suptitle">THE GENIUSES BEHIND OUR WORK</div>
         <h2 class="section__title">OUR TEAM</h2>
         <div class="section__icon">
-          <svg  width="24px" height="19px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 511.984 511.984" > 
+          <svg  width="24px" height="19px" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 511.984 511.984" > 
             <path d="M255.992,244.949c-23.205,46.39-50.215,106.734-50.215,126.316c0,16.952,8.451,31.956,21.352,41.054
               c2.932-10.517,9.696-24.511,15.608-35.672l13.255-25.021l13.255,25.021c5.912,11.161,12.677,25.155,15.608,35.672
               c12.901-9.098,21.352-24.102,21.352-41.054C306.207,351.682,279.197,291.339,255.992,244.949z"/>
@@ -51,14 +51,20 @@
                 <div class="profile__position">Frontend Developer</div>
     
                 <ul class="socials">
-                  <li class="social"><a href="" class="social__link"><i class="fab fa-facebook-f"></i></a></li>
-                  <li class="social"><a href="" class="social__link"><i class="fab fa-twitter"></i></a></li>
-                  <li class="social"><a href="" class="social__link"><i class="fab fa-google-plus-g"></i></a></li>
-                  <li class="social"><a href="" class="social__link"><i class="fab fa-linkedin-in"></i></a></li>
+                  <li class="social"><a href="#" class="social__link"><i class="fab fa-facebook-f"></i></a></li>
+                  <li class="social"><a href="#" class="social__link"><i class="fab fa-twitter"></i></a></li>
+                  <li class="social"><a href="#" class="social__link"><i class="fab fa-google-plus-g"></i></a></li>
+                  <li class="social"><a href="#" class="social__link"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
     
                 <div class="profile__text">
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus dui sit amet ligula efficitur, sit amet lacinia massa dictum. Etiam accumsan felis a nunc facilisis, ut euismod lacus placerat. Praesent rutrum eget massa a convallis. Nam vitae augue malesuada, accumsan mauris ut, consectetur.</p>
+                </div>
+
+                <div class="profile__line"></div>
+
+                <div class="profile__linkwrap">
+                  <a class="profile__link" href="#">VIEW PROFILE</a>
                 </div>
               </div>
             </div>
